k8s/ecommerce-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-deploy
  namespace: ecommerce
  labels:
    app: ecommerce

spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce  
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  template:
    metadata:
      labels:
        app: ecommerce
    spec:
      containers:
        - name: ecommerce-pod 
          image: mohamedtaha7/ecommerce-api 
          imagePullPolicy: Alwaysg
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /app/wwwroot/images
              name: ecommerce-volume
      volumes:
        - name: ecommerce-volume
          persistentVolumeClaim:
            claimName: ecommerce-sql-pvc
