k8s/sql-deploy.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: sql-deploy
  namespace: ecommerce
  labels:
    app: sql 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sql
  template:
    metadata:
      labels:
        app: sql
    spec:
      containers:
        - name: sql-pod
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: sql-volume
              mountPath: /var/opt/mssql
      
      volumes:
        - name: sql-volume
          persistentVolumeClaim:
            claimName: sql-pvc
