k8s/08-ecommerce-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-svc 
  namespace: ecommerce
spec:
  type: ClusterIP
  selector:
    app: ecommerce
  ports:
    - port: 80
      targetPort: 8080
