k8s/ecommerce-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: api-svc 
spec:
  type: ClusterIP
  selector:
    app: ecommerce
  ports:
    - port: 80
      targetPort: 8080
