k8s/sql-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: sql-svc
  namespace: ecommerce
spec:
  type: ClusterIP
  selector:
    app: sql
  ports:
    - port: 1433
      targetPort: 1433
